--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <navbar class="col-xs-12">
 
 
-        <nav class="navbar navbar-dark bg-dark col-xs-12">
+        <nav class="navbar navbar-light bg-light col-xs-12">
             <a href="index.html" class="d-flex col-xs-12 col-sm-5 navbar-brand justify-content-center fixbrand">Your Name</a>
             <!-- <div class="justify-content-end">
                 <a href="index.html">About</a>
@@ -54,6 +54,35 @@
             <a href="contact.html">Contact</a> -->
 
     </header>
+    </div>
+
+
+    <div id="main-container" class="container">
+        <div class="row">
+            <section class="main-section">
+                <h1>Contact</h1>
+                <div class="col-xs-12 col-sm-6 float-left">
+                    <form id="contact-form">
+                        <ul>
+                            <li>
+                                <label for="name">Name</label>
+                                <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+                            </li>
+                            <li>
+                                <label for="email">Email</label>
+                                <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+                            </li>
+                            <li>
+                                <label for="message">Message</label>
+                                <textarea id="message" name="message" required="required"></textarea>
+                            </li>
+                        </ul>
+                        <input type="submit">
+                    </form>
+
+            </section>
+            </div>
+        </div>
     </div>
 
 
