--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
     <navbar class="col-xs-12">
 
 
-        <nav class="navbar navbar-dark bg-dark col-xs-12">
+        <nav class="navbar navbar-light bg-light col-xs-12">
             <a href="index.html" class="d-flex col-xs-12 col-sm-5 navbar-brand justify-content-center fixbrand">Your Name</a>
             <!-- <div class="justify-content-end">
                 <a href="index.html">About</a>
@@ -48,6 +48,9 @@
 
         </nav>
     </navbar>
+
+    </header>
+    </div>
 
     <div id="main-container" class="container">
         <div class="row">
@@ -83,8 +86,6 @@
 
     </div>
 
-    </header>
-    </div>
 
     <div class="col-12">
         <footer class="newfooter">
